@@ -2,8 +2,10 @@ package com.example.my_blog.api;
 
 import com.example.my_blog.domain.member.Member;
 import com.example.my_blog.domain.member.service.MemberService;
-import lombok.AllArgsConstructor;
-import lombok.Data;
+import com.example.my_blog.domain.member.service.dto.request.JoinMemberRequestDTO;
+import com.example.my_blog.domain.member.service.dto.response.JoinMemberResponseDTO;
+import com.example.my_blog.domain.member.service.dto.response.ListMemberResponse;
+import com.example.my_blog.domain.member.service.dto.response.ListMemberResponseDTO;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -11,7 +13,6 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -23,53 +24,27 @@ public class MemberApiController {
    * 회원 가입
    */
   @PostMapping("/member/join")
-  public JoinMemberResponse joinMember(@RequestBody JoinMemberRequest request) {
+  public JoinMemberResponseDTO joinMember(@RequestBody JoinMemberRequestDTO joinMemberRequestDTO) {
     Member member = new Member();
-    member.setName(request.getName());
 
-    memberService.join(member);
+    member.setName(joinMemberRequestDTO.getName());
+    member.setAge(joinMemberRequestDTO.getAge());
 
-    return new JoinMemberResponse(member.getId());
+    Long joinId = memberService.join(member);
+
+    return new JoinMemberResponseDTO(joinId);
   }
 
   /**
    * 회원 조회
    */
   @GetMapping("/member/list")
-  public ListMemberResponse<List<MemberData>> listMember() {
+  public ListMemberResponse<List<ListMemberResponseDTO>> listMember() {
     List<Member> memberList = memberService.findAll();
-    List<MemberData> memberData = memberList.stream().map(m -> new MemberData(m.getId(), m.getName()))
-        .collect(Collectors.toList());
+    List<ListMemberResponseDTO> listMemberData = memberList.stream().map(m -> new ListMemberResponseDTO(m.getId(), m.getName()))
+        .toList();
 
-    return new ListMemberResponse<>(memberData.size(), memberData);
+    return new ListMemberResponse<>(listMemberData.size(), listMemberData);
   }
 
-  @Data
-  static class JoinMemberRequest {
-
-    private String name;
-  }
-
-  @Data
-  @AllArgsConstructor
-  static class JoinMemberResponse {
-
-    private Long id;
-  }
-
-  @Data
-  @AllArgsConstructor
-  static class ListMemberResponse<T> {
-
-    private int count;
-    private T data;
-  }
-
-  @Data
-  @AllArgsConstructor
-  static class MemberData {
-
-    private Long id;
-    private String name;
-  }
 }
